# fpl-machine-learning

./: .pre-commit-config.yaml  README.md  hello.py  inital_prediction.ipynb  pyproject.toml
artifacts/: eda_query.sql
notebooks/: eda.ipynb
src/: utils.py
