[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "mlflow>=2.19.0",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.2",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.37",
]


[tool.ruff]
extend-select = ["C4", "TCH", "SIM"]
show-fixes = true

[dependency-groups]
dev = [
    "ruff>=0.9.2",
]
